docs/apache-airflow-providers-google/6.7.0/_sources/_api/airflow/providers/google/cloud/links/vertex_ai/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.vertex_ai`
========================================================

.. py:module:: airflow.providers.google.cloud.links.vertex_ai


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.vertex_ai.VertexAIModelLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAITrainingPipelinesLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIDatasetLink
   airflow.providers.google.cloud.links.vertex_ai.VertexAIDatasetListLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_BASE_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_MODEL_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_TRAINING_PIPELINES_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_DATASET_LINK
   airflow.providers.google.cloud.links.vertex_ai.VERTEX_AI_DATASET_LIST_LINK


.. py:data:: VERTEX_AI_BASE_LINK
   :annotation: = https://console.cloud.google.com/vertex-ai

   

.. py:data:: VERTEX_AI_MODEL_LINK
   

   

.. py:data:: VERTEX_AI_TRAINING_PIPELINES_LINK
   

   

.. py:data:: VERTEX_AI_DATASET_LINK
   

   

.. py:data:: VERTEX_AI_DATASET_LIST_LINK
   

   

.. py:class:: VertexAIModelLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Vertex AI Model link

   .. py:attribute:: name
      :annotation: = Vertex AI Model

      

   .. py:attribute:: key
      :annotation: = model_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance, model_id)
      :staticmethod:



.. py:class:: VertexAITrainingPipelinesLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Vertex AI Training Pipelines link

   .. py:attribute:: name
      :annotation: = Vertex AI Training Pipelines

      

   .. py:attribute:: key
      :annotation: = pipelines_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: VertexAIDatasetLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Vertex AI Dataset link

   .. py:attribute:: name
      :annotation: = Dataset

      

   .. py:attribute:: key
      :annotation: = dataset_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance, dataset_id)
      :staticmethod:



.. py:class:: VertexAIDatasetListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing Vertex AI Datasets Link

   .. py:attribute:: name
      :annotation: = Dataset List

      

   .. py:attribute:: key
      :annotation: = datasets_conf

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance)
      :staticmethod:



